# apple-receipt-to-ynab

./: .gitignore  DEVELOPMENT.md  README.md  example-config.yaml  install_app.sh  pyproject.toml  run_tests.sh
config/: mappings.yaml
examples/: mappings.yaml
src/apple_receipt_to_ynab/: __init__.py  cli.py  config.py  credentials.py  dotenv.py  gmail_client.py  logger.py  matcher.py  models.py  parser.py  service.py  tax.py  ynab.py
tests/: test_cli.py  test_config.py  test_dotenv.py  test_gmail_client.py  test_logger.py  test_matcher.py  test_parser_email_context.py  test_parser_eml.py  test_parser_eml_alt_format.py  test_paths.py  test_service.py  test_tax.py  test_ynab.py
