[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app-store-ynab"
version = "0.1.0"
description = "Parse Apple subscription receipt emails and create YNAB split transactions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ynab>=1.5.1",
  "PyYAML>=6.0.1",
]

[project.scripts]
app-store-ynab = "apple_receipt_to_ynab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
